        - Refactored the GWT edition to be more inline with the other 
          editions. Especially, we ported the ClientResource class.
        - Added ClientInfo#from property corresponding to the "From" HTTP
          header.
        - Added Response#age and #retryAfter properties corresponding to 
          the "Age" and "Retry-After" HTTP headers.
      - Bugs fixed
        - Fixed bug when the deprecated method "createRoot" is 
          implemented instead of the "createInboundRoot".
          Reported by Fabian Mandelbaum.
        - ServerResource#getVariants() now returns an empty list
          instead of null when no annotation is present.
          Reported by Tal Liron.
        - Annotated methods returning a String, a StringRepresentation
          or a Reader were only exposing a "text/plain" variant even
          though most other media types are acceptable like JSON, XML.
        - Fixed bug in ServerResource when content negotiation was
          disabled, all non standard methods where invoking the OPTIONS
          method. 
        - Fixed ClientResource to throw ResourceException upon error
          as specified in Javadocs. Reported by Patrick Logan.
        - ClientResource was not checking the "followRedirects"
          property.
        - Fixed bug when sending entities with the GWT edition.
        - Fixed bug when normalizing References with the GWT edition.
          Reported by Guido Schmidt.
        - Fixed OSGi dependency issue with the JAX-RS extension.
          Reported by Stefan Maassen.
        - The rootRef attribute of a request was not set when handled by the 
          Component's internal router.
          Reported by Emily Toop.
        - Fixed bug with conditional methods in ServerResource when no
          variant is available.
        - ServerServlet life cycle is now correctly propagated to the 
          embedded Restlet component and applications.
          Reported by Rickard Oberg.