@@ -1,0 +1,122 @@
+/**
+ * Copyright 2005-2009 Noelios Technologies.
+ * 
+ * The contents of this file are subject to the terms of one of the following
+ * open source licenses: LGPL 3.0 or LGPL 2.1 or CDDL 1.0 or EPL 1.0 (the
+ * "Licenses"). You can select the license that you prefer but you may not use
+ * this file except in compliance with one of these Licenses.
+ * 
+ * You can obtain a copy of the LGPL 3.0 license at
+ * http://www.opensource.org/licenses/lgpl-3.0.html
+ * 
+ * You can obtain a copy of the LGPL 2.1 license at
+ * http://www.opensource.org/licenses/lgpl-2.1.php
+ * 
+ * You can obtain a copy of the CDDL 1.0 license at
+ * http://www.opensource.org/licenses/cddl1.php
+ * 
+ * You can obtain a copy of the EPL 1.0 license at
+ * http://www.opensource.org/licenses/eclipse-1.0.php
+ * 
+ * See the Licenses for the specific language governing permissions and
+ * limitations under the Licenses.
+ * 
+ * Alternatively, you can obtain a royalty free commercial license with less
+ * limitations, transferable or non-transferable, directly at
+ * http://www.noelios.com/products/restlet-engine
+ * 
+ * Restlet is a registered trademark of Noelios Technologies.
+ */
+
+package org.restlet.data;
+
+import java.util.Date;
+
+/**
+ * Additional information about the status or transformation of a request or
+ * response. This is typically used to warn about a possible issues with caching
+ * operations or transformations applied to the entity body.<br>
+ * <br>
+ * Note that when used with HTTP connectors, this class maps to the "Warning"
+ * header.
+ * 
+ * @author Jerome Louvel
+ */
+public class Warning {
+
+    /** The special status. */
+    private volatile Status status;
+
+    /** The agent. Typically a caching agent. */
+    private volatile String agent;
+
+    /** The warning date. */
+    private volatile Date date;
+
+    /**
+     * Constructor.
+     */
+    public Warning() {
+        this.status = null;
+        this.agent = null;
+        this.date = null;
+    }
+
+    /**
+     * Returns the agent. Typically a caching agent.
+     * 
+     * @return The agent. Typically a caching agent.
+     */
+    public String getAgent() {
+        return agent;
+    }
+
+    /**
+     * Returns the warning date.
+     * 
+     * @return The warning date.
+     */
+    public Date getDate() {
+        return date;
+    }
+
+    /**
+     * Returns the special status.
+     * 
+     * @return The special status.
+     */
+    public Status getStatus() {
+        return status;
+    }
+
+    /**
+     * Sets the agent. Typically a caching agent.
+     * 
+     * @param agent
+     *            The agent. Typically a caching agent.
+     */
+    public void setAgent(String agent) {
+        this.agent = agent;
+    }
+
+    /**
+     * Sets the warning date.
+     * 
+     * @param date
+     *            The warning date.
+     */
+    public void setDate(Date date) {
+        this.date = date;
+    }
+
+    /**
+     * Sets the special status.
+     * 
+     * @param status
+     *            The special status.
+     */
+    public void setStatus(Status status) {
+        this.status = status;
+    }
+
+}
